--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,88 +1,79 @@
-image: node:18-alpine
+image: docker:20.10.16
+
+services:
+  - docker:20.10.16-dind
+
+variables:
+  DOCKER_TLS_CERTDIR: "/certs"
+  DOCKER_HOST: tcp://docker:2376
+  DOCKER_TLS_VERIFY: 1
+  DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client"
 
 stages:
-  - install
-  - lint
   - test
   - build
   - deploy
 
-variables:
-  DOCKER_DRIVER: overlay2
-  DOCKER_TLS_CERTDIR: ""
-
+# Cache dependencies between jobs
 cache:
+  key: ${CI_COMMIT_REF_SLUG}
   paths:
     - node_modules/
 
-install:
-  stage: install
-  script:
-    - npm ci
-  artifacts:
-    paths:
-      - node_modules/
-
-lint:
-  stage: lint
-  script:
-    - npm run lint
-  dependencies:
-    - install
-
+# Run tests
 test:
   stage: test
-  services:
-    - postgres:15-alpine
-    - redis:7-alpine
-  variables:
-    POSTGRES_DB: grammarly_test
-    POSTGRES_USER: postgres
-    POSTGRES_PASSWORD: postgres
-    DATABASE_URL: postgresql://postgres:postgres@postgres:5432/grammarly_test?schema=public
-    REDIS_URL: redis://redis:6379
+  image: node:18-alpine
   script:
+    - apk add --no-cache python3 make g++ openssl
+    - npm ci
     - npm run test
-  dependencies:
-    - install
+  only:
+    - main
+    - merge_requests
 
+# Build Docker image
 build:
   stage: build
   image: docker:20.10.16
-  services:
-    - docker:20.10.16-dind
   script:
     - docker build -t $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA .
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+    - docker tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA $CI_REGISTRY_IMAGE:latest
+    - docker push $CI_REGISTRY_IMAGE:latest
   only:
     - main
-    - tags
 
+# Deploy to staging
 deploy_staging:
   stage: deploy
-  image: docker:20.10.16
-  services:
-    - docker:20.10.16-dind
+  image: alpine:latest
+  before_script:
+    - apk add --no-cache curl
   script:
-    - docker pull $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
-    - docker tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA $CI_REGISTRY_IMAGE:staging
-    - docker push $CI_REGISTRY_IMAGE:staging
+    - echo "Deploying to staging environment"
+    # Add your deployment commands here
+    # For example, using curl to trigger a deployment webhook
+    # - curl -X POST $STAGING_DEPLOY_WEBHOOK
   environment:
     name: staging
   only:
     - main
+  when: manual
 
+# Deploy to production
 deploy_production:
   stage: deploy
-  image: docker:20.10.16
-  services:
-    - docker:20.10.16-dind
+  image: alpine:latest
+  before_script:
+    - apk add --no-cache curl
   script:
-    - docker pull $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
-    - docker tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA $CI_REGISTRY_IMAGE:production
-    - docker push $CI_REGISTRY_IMAGE:production
+    - echo "Deploying to production environment"
+    # Add your deployment commands here
+    # For example, using curl to trigger a deployment webhook
+    # - curl -X POST $PRODUCTION_DEPLOY_WEBHOOK
   environment:
     name: production
   only:
-    - tags
+    - main
   when: manual 
